--- a/css/custom.css
+++ b/css/custom.css
@@ -14,6 +14,11 @@ p {
  	line-height: 1.75em;
 }
 
+address {
+	color: #666666;
+ 	font-weight: 300;
+ }
+
 .mb-40 {
 	margin-bottom: 40px;
 }
@@ -81,16 +86,73 @@ p {
 	display: table-cell;
 }
 
-.beer-photo {
-	width: 400px;
-	height: 100%;
-	background-image: url("../img/capunga_lager.jpg");
-	background-size: cover;
-	background-position: center center;
+.card-box {
+	border-radius: 5px;
+
+	box-shadow: 0 0 10px #cccccc;
+	margin-bottom: 20px;
 }
 
-.beer-description {
-	padding: 50px;
+
+.card-header.mc-cf {
+	background: url("../imgs/clients/bg-mc-cf.jpg") center center;
+	background-size: cover;
+}
+
+.card-header.mafua {
+	background: url("../imgs/clients/bg-mafua.jpg") center center;
+	
+	background-size: cover;
+}
+
+.card-header.cfrios {
+	background: url("../imgs/clients/bg-cfrios.jpg") center center;
+	
+	background-size: cover;
+}
+
+.card-header {
+	border-radius: 5px 5px 0 0;
+	height: 220px;
+	width: 100%;
+}
+
+.card-title {
+	border-radius: 5px 5px 0 0;
+
+	padding: 20px 10px;
+	color: white;
+	font-size: 1.5em;
+	margin: 0;
+	
+	width: 100%;
+	height: 100%;
+
+	vertical-align: middle;
+	
+	text-shadow: 0 0 10px black;
+  background: rgba(0,0,0,0.25);
+}
+
+.card-logo {
+	/*border: 2px solid white;*/
+	width: 50%;
+
+	margin: auto; 
+	margin-top: -25%;
+	margin-bottom: 10px;
+}
+
+.card-logo img{
+	border-radius: 50%;
+	width: 100%;
+}
+
+.card-body {
+	padding: 10px;
+	
+	border-radius: 0 0 5px 5px;
+	border: 1px solid #cccccc;
 }
 
 .social-links {
@@ -115,6 +177,7 @@ p {
 .social-links li i {
 	padding-bottom: 5px; 
 }
+
 
 @media(max-width:480px) {
   h1 {
